--- a/service_invocation/java/http/checkout/pom.xml
+++ b/service_invocation/java/http/checkout/pom.xml
@@ -11,9 +11,15 @@
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
+		<dapr.version>1.10.0-SNAPSHOT</dapr.version>
 		<slf4jVersion>1.6.1</slf4jVersion>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>io.dapr</groupId>
+			<artifactId>dapr-sdk</artifactId>
+			<version>${dapr.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
