--- a/service_invocation/csharp/http/checkout/checkout.csproj
+++ b/service_invocation/csharp/http/checkout/checkout.csproj
@@ -7,4 +7,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+
+  <ItemGroup>  
+    <PackageReference Include="Dapr.Client" Version="1.11.0" />  
+  </ItemGroup>  
+
 </Project>
